metadata-sfdx/force-app/main/default/objects/LiveText__OptInStatus__c/LiveText__OptInStatus__c.object-meta.xml
<CustomObject>
    <description>Opt-in status for a given phone number. The status regards communication between the relevant LiveMessage phone number and the given phone number.</description>
    <label>Opt-In Status</label>
    <nameField>
        <label>OptInStatus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opt-In Status</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>