metadata-sfdx/force-app/main/default/objects/LiveText__OptInStatus__c/fields/LiveText__LiveTextNumber__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveTextNumber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The LiveMessage phone number related to this opt-in status</description>
    <label>LiveMessage Number</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipName>OptInStatus</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>