metadata-sfdx/force-app/main/default/objects/LiveText__OptInStatus__c/fields/LiveText__Status__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Status__c</fullName>
    <description>The opt-in status of the subscriber. 1 = opted in, 0 = opted out</description>
    <label>Status</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>