metadata-sfdx/force-app/main/default/objects/LiveText__OptInStatus__c/fields/LiveText__SubscriberPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>LiveText__SubscriberPhoneNumber__c</fullName>
    <description>The phone number of the subscriber opting in or out of communication with the relevant LiveMessage phone number.</description>
    <label>SubscriberPhoneNumber</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>